--- a/apps/commerce/package.json
+++ b/apps/commerce/package.json
@@ -19,11 +19,13 @@
     "*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.7.1",
     "clsx": "^2.0.0",
     "next": "14.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
