chore: add env in lhci shopify

--- a/.github/workflows/lhci.yml
+++ b/.github/workflows/lhci.yml
@@ -44,4 +44,6 @@ jobs:
           pnpm install -g @lhci/cli@0.12.x
           pnpm lhci --filter=commerce
         env:
+          SHOPIFY_STOREFRONT_ACCESS_TOKEN: ${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
+          SHOPIFY_STORE_DOMAIN: ${{ secrets.SHOPIFY_STORE_DOMAIN }}
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
