--- a/.github/workflows/lhci.yml
+++ b/.github/workflows/lhci.yml
@@ -8,9 +8,20 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  # -- SHOPIFY CONFIG -- #
   SHOPIFY_STOREFRONT_ACCESS_TOKEN: ${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
   SHOPIFY_STORE_DOMAIN: ${{ secrets.SHOPIFY_STORE_DOMAIN }}
+  # -- SHOPIFY CONFIG -- #
+
+  # -- LHCI CONFIG -- #
   LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+  # -- LHCI CONFIG -- #
+
+  # -- TURBO CACHE -- #
+  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+  TURBO_REMOTE_ONLY: true
+  # -- TURBO CACHE -- #
 
 jobs:
   lhci:
