feat: add react query to use, and split routes in package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,12 @@
       "mode": "auto"
     }
   ],
-  "cSpell.words": ["Quixer", "shopify"]
+  "cSpell.words": [
+    "Quixer",
+    "shopify",
+    "superjson",
+    "trpc",
+    "TRPC",
+    "typesafety"
+  ]
 }
