--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "version": "0.0.0",
+  "name": "quixer",
+  "description": "Toolkit to build a e-commerce",
+  "repository": "git@github.com:Yokaito/quixer.git",
+  "license": "MIT",
   "private": true,
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
@@ -7,14 +17,22 @@
     "lhci": "turbo run lhci",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "release": "lerna version patch --yes && lerna publish from-git --yes",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "postinstall": "npx husky install"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.2",
+    "@commitlint/config-conventional": "^18.4.2",
+    "commitizen": "^4.3.0",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.48.0",
+    "husky": "^8.0.3",
+    "lerna": "^7.4.2",
     "prettier": "^3.0.3",
     "tsconfig": "workspace:*",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@8.9.0",
-  "name": "quixer"
+  "packageManager": "pnpm@8.9.0"
 }
