--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,9 +1,19 @@
 {
   "name": "@quixer/server",
   "version": "0.0.1",
+  "description": "A lightweight, framework agnostic api to use in e-commerce",
+  "author": "Guilherme Fontes <gui.fontes.amorim@gmail.com> (@guifontes)",
   "main": "./index.ts",
   "types": "./index.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Yokaito/quixer",
+    "directory": "packages/server"
+  },
   "scripts": {
     "lint": "eslint ."
   },
