--- a/apps/commerce/package.json
+++ b/apps/commerce/package.json
@@ -2,6 +2,11 @@
   "name": "commerce",
   "version": "0.0.2",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Yokaito/quixer",
+    "directory": "apps/commerce"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
