--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "tsconfig/base.json",
+  "compilerOptions": {},
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
 }
