chore: change files and remove type module in sdk

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -13,12 +13,10 @@
     "directory": "packages/sdk"
   },
   "files": [
-    "dist"
+    "./dist"
   ],
-  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
