--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -43,7 +43,6 @@
     "@types/node": "^20.9.4",
     "eslint-config-custom": "workspace:*",
     "next": "14.0.3-canary.9",
-    "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tsconfig": "workspace:*",
     "tsup": "^6.0.1",
@@ -51,6 +50,8 @@
     "zod": "^3.22.4"
   },
   "peerDependencies": {
-    "next": "^14.0.0"
+    "next": "^14.0.0",
+    "@trpc/next": "^10.0.0",
+    "@trpc/server": "^10.0.0"
   }
 }
