--- a/apps/commerce/package.json
+++ b/apps/commerce/package.json
@@ -25,7 +25,7 @@
     "*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@quixer/sdk": "workspace:*",
+    "@quixer/server": "workspace:*",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^5.8.4",
