refactor(sdk): make sdk reutilisable with each integration generate new folder

--- a/.github/workflows/lhci.yml
+++ b/.github/workflows/lhci.yml
@@ -11,6 +11,7 @@ env:
   # -- SHOPIFY CONFIG -- #
   SHOPIFY_STOREFRONT_ACCESS_TOKEN: ${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
   SHOPIFY_STORE_DOMAIN: ${{ secrets.SHOPIFY_STORE_DOMAIN }}
+  SHOPIFY_ADMIN_ACCESS_TOKEN: ${{ secrets.SHOPIFY_ADMIN_ACCESS_TOKEN }}
   # -- SHOPIFY CONFIG -- #
 
   # -- LHCI CONFIG -- #
