--- a/apps/commerce/.env.example
+++ b/apps/commerce/.env.example
@@ -1,2 +1,7 @@
-SHOPIFY_STOREFRONT_ACCESS_TOKEN=""
+# NEXTJS ENV #
+NEXT_PUBLIC_VERCEL_URL="localhost:3000"
+
+SHOPIFY_ADMIN_ACCESS_TOKEN="admin_token"
+SHOPIFY_STOREFRONT_ACCESS_TOKEN="storefront_token"
 SHOPIFY_STORE_DOMAIN="[your-shopify-store-subdomain].myshopify.com"
+
