--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@sdk/*": ["src/*"]
+      "@sdk/*": ["src/*"],
+      "@shopify/*": ["src/clients/shopify/*"]
     }
   },
   "include": ["."],
