--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -24,11 +24,11 @@
       "default": "./dist/index.mjs",
       "types": "./dist/index.d.ts"
     },
-    "./client": {
-      "import": "./dist/client.mjs",
-      "module": "./dist/client.mjs",
-      "default": "./dist/client.mjs",
-      "types": "./dist/client.d.ts"
+    "./shopify": {
+      "import": "./dist/clients/shopify/index.mjs",
+      "module": "./dist/clients/shopify/index.mjs",
+      "default": "./dist/clients/shopify/index.mjs",
+      "types": "./dist/clients/shopify/index.d.ts"
     }
   },
   "scripts": {
