refactor: sdk with zod and types using infer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,10 @@
   ],
   "cSpell.words": [
     "healthcheck",
+    "metafield",
+    "Metafield",
+    "metafields",
+    "metaobject",
     "quixer",
     "Quixer",
     "shopify",
