--- a/apps/commerce/package.json
+++ b/apps/commerce/package.json
@@ -55,6 +55,7 @@
     "postcss": "^8.4.31",
     "prettier": "3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "schema-dts": "^1.1.2",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
