feat: add useCookie and useColorScheme to toggle theme and save in cookie

--- a/apps/commerce/.eslintrc.json
+++ b/apps/commerce/.eslintrc.json
@@ -8,15 +8,17 @@
         "args": "after-used",
         "caughtErrors": "none",
         "ignoreRestSiblings": true,
-        "vars": "all"
+        "vars": "all",
+        "argsIgnorePattern": "^_"
       }
     ],
     "prefer-const": "error",
     "react-hooks/exhaustive-deps": "error",
+
     "unicorn/filename-case": [
       "error",
       {
-        "case": "kebabCase"
+        "case": "camelCase"
       }
     ]
   }
