--- a/apps/commerce/package.json
+++ b/apps/commerce/package.json
@@ -33,16 +33,19 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "clsx": "^2.0.0",
+    "js-cookie": "^3.0.5",
     "next": "14.1.1-canary.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.0.0",
+    "usehooks-ts": "^2.14.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@lhci/cli": "^0.12.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.9.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
