--- a/apps/commerce/package.json
+++ b/apps/commerce/package.json
@@ -34,6 +34,7 @@
     "@trpc/server": "^10.43.6",
     "clsx": "^2.0.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.331.0",
     "next": "14.1.1-canary.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
